============================
Change log for gocept.jsform
============================

0.3 (unreleased)
================

- Add events ``after-load`` and ``after-save``.

- Fix ``JSON`` serialization to be able to handle Knockout observables.


0.2 (2013-08-26)
================

- Made it possible to preselect values in arrays when the form is rendered.

- Changed form submit behaviour:

  - Default submit type is not ``POST`` instead of ``GET``. (Change it with the
    ``save_type`` option)

  - Data is now submitted as ``JSON`` type.


0.1 (2013-08-17)
================

initial release